# pressure-gauge

./: README.md  index.html  package-lock.json  package.json  settings.json  tailwind.config.js
src/: App.css  App.jsx  Chart.jsx  CpusGraph.jsx  Processes.jsx  TempGauge.jsx  styles.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: main.rs
